@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<action-icons xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="plone">
- <action-icon category="controlpanel" action_id="discussion"
-              title="Discussion" priority="0"
-              icon_expr="discussionitem_icon.gif"
-              i18n:attributes="title"/>
-</action-icons>
