@@ -6,7 +6,7 @@
    <property name="title" i18n:translate="">Moderate comments</property>
    <property name="description" i18n:translate=""></property>
    <property name="url_expr">string:${globals_view/navigationRootUrl}/@@moderate-comments</property>
-   <property name="icon_expr"></property>
+   <property name="icon_expr">string:${globals_view/navigationRootUrl}/discussionitem_icon.gif</property>
    <property name="available_expr">portal/@@moderate-comments-enabled|nothing</property>
    <property name="permissions">
     <element value="Review comments"/>
